# population_evolution

./: pyproject.toml
scripts/: BaseModel.py  PopulationModel.py  __init__.py
scripts/people/: Person.py
simulations/: run_sim.py  test_sim.py
