[tool.poetry]
name = "population-evolution"
version = "0.1.0"
description = ""
authors = ["Aitor <aitirga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
streamlit = "^1.27.1"
manim = "^0.17.3"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
